syntax = "proto3";

package ansible;

service AnsibleRunner {
    rpc RunAnsible (Cluster) returns (stream TaskStatus) {}
}

service DB {
    rpc GetID (Cluster) returns (NewID) {}
    rpc UpdateClusterState (Cluster) returns (TaskStatus) {}
}

message Cluster {
    int32 ID = 1;
    string Name = 2;
    string DisplayName = 3;
    string HostURL = 4;
    string EntityStatus = 5;
    string ClusterType = 6;
    repeated Service services = 7;
}

message Service {
    string Name = 1;
    string Type = 2;
    string ClusterRef = 3;
    string ServiceState = 4;
    string ServiceURL = 5;
    string Config = 6;
    string DisplayName = 7;
    string EntityStatus = 8;
}

message TaskStatus {
    string Status = 1;
}

message NewID {
    int32 ID = 1;
}
